<resources>
    <string name="app_name">LinkUp</string>
    <string name="title_activity_login">Sign in</string>
    <item name="TAG" type="id" />

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="loading">Cargando</string>
    <string name="action_logout">Salir</string>

    <string name="facebook_app_id">113492992704721</string>
    <string name="fb_login_protocol_scheme">fb113492992704721</string>

    <string name="activit_continue_button">Continuar con facebook</string>
    <string name="activity_loigin_dont_publish_facebook">Nunca publicaremos algo en tu facebook</string>
    <string name="activity_loigin_use_conditions">Condiciones de uso</string>
    <string name="activity_loigin_use_logo">LinkUp</string>

    <string name="activity_profile_interests">Intereses</string>

    <string name="activity_configurations_edit_info">Editar perfil</string>
    <string name="activity_configurations_account">ajustes</string>

    <string name="icon_game">Linkear</string>
    <string name="icon_chats">Chat</string>
    <string name="icon_confirm">Confirmar cambios</string>

    <!-- Navigation lateral panel-->
    <string name="nav_item_link">Linkear</string>
    <string name="nav_item_chats">Chat</string>

    <string name="nav_section_config">Configuración</string>
    <string name="nav_item_edit_profile">Editar perfil</string>
    <string name="nav_item_pick_photo">Elegir fotos</string>
    <string name="nav_item_pick_profile_photo">Elegi tu foto de perfil</string>

    <string name="nav_item_edit_account">Ajustes</string>
    <string name="nav_item_linkup_plus">LinkUp Plus</string>

    <string name="nav_item_edit_logout">Cerrar sesión</string>

    <string name="edit_photo_explain_gallery">Pulsa para cambiar tus fotos</string>
    <string name="edit_profile_photo_explain_gallery">Pulsa para cambiar tu foto de perfil</string>
    <string name="edit_profile_formacion">Formación</string>
    <string name="edit_profile_work">Trabajo actual</string>
    <string name="edit_profile_about_me">Sobre mí</string>
    <string name="edit_profile_about_me_hint">No dejes tu info en blanco. Añádele un toque personal. Por ejemplo a mucha gente le gusta añadir el link a sus redes sociales</string>

    <string name="edit_settings_invisible_mode">Mostrarme en LinkUp</string>
    <string name="edit_settings_invisible_mode_hint">Puedes activar modo invisible para ocultar tu perfil para todos excepto aquellos con los que has hecho un link</string>
    <string name="edit_settings_seccion_exploration">Ajustes de exploración</string>
    <string name="edit_settings_seccion_exploration_sub">Mostrarme</string>
    <string name="edit_settings_exploration_men">Hombres</string>
    <string name="edit_settings_exploration_women">Mujeres</string>
    <string name="edit_settings_exploration_just_friends">Sólo amigos</string>

    <string name="edit_settings_exploration_age_range">Rango de edad</string>
    <string name="edit_settings_exploration_age_range_hint">LinkUp usará estas preferencias para sugerirte candidatos a linkear</string>
    <string name="edit_settings_seccion_app_settings">Ajustes de la app</string>
    <string name="edit_settings_app_settings_notifications">Notificaciones</string>
    <string name="edit_settings_btn_get_link_plus">Linkup plus</string>
    <string name="edit_settings_btn_get_salir">salir</string>
    <string name="edit_settings_btn_get_eliminar">eliminar cuenta</string>

    <string name="edit_settings_logo">LinkUp</string>
    <string name="edit_settings_version">Versión 0.0.1</string>
    <string name="edit_settings_version_platform">(Android)</string>

    <string name="welcome">Su usuario fue creado con éxito</string>
    <string name="welcome_title">Todo listo</string>

    <string name="edit_success_title">Todo listo</string>
    <string name="edit_success_message">Los datos fueron almacenados con éxito</string>
    <string name="linkUpPlus_success_title">Felicitaciones</string>
    <string name="linkUpPlus_success_message">Ya tienes todos los beneficios de LinkUp Plus</string>

    <string name="linkUpPlus_out_success_title">Completado</string>
    <string name="linkUpPlus_out_success_message">Ya no tienes todos los beneficios de LinkUp Plus</string>
    <string name="edit_profile_work_hint">¿Dónde trabajas?</string>

    <string name="edit_profile_studies_hint">¿Dónde estudias/estudiaste?</string>

    <string name="missing_gender_text">¡Un pasito más! Faltan algunos datos para completar tu perfil. Rellénalos y podrás comenzar a usar la aplicación.</string>
    <string name="missing_gender_male">Hombre</string>
    <string name="missing_gender_fem">Mujer</string>
    <string name="missing_gender_btn_ok">Todo listo</string>

    <string name="create_user_error_fireabase_get">Error de conexión, por favor vuelva a intentar más tarde</string>

    <string name="edit_profile_discartChanges">¿Está seguro que desea descartar los cambios?</string>
    <string name="edit_profile_discartChanges_negative">Cancelar</string>
    <string name="edit_profile_discartChanges_positive">Descartar</string>
    <string name="enter_message">Ingrese el mensaje</string>

    <string name="label_yesterday">Ayer</string>
    <string name="load_more">Cargar más</string>
    <string name="activity_new_match_title">¡Nuevo link!</string>
    <string name="activity_new_match_subtitle"> también quiere linkear contigo</string>
    <string name="activity_new_match_btn_chat">Iniciar chat</string>
    <string name="activity_new_match_title_later">Chatear más tarde</string>
    <string name="no_chat_room_open">Todavía no tienes chats abiertos</string>
    <string name="no_more_candidates">Por el momento no hay candidatos,</string>
    <string name="came_back_later">vuelve más tarde</string>
    <string name="no_messages_yet">No seas tímido y comienza la conversación</string>
    <string name="no_startable">Ella debe hablarte primero </string>

    <string name="no_messages_yet_woman">No seas tímida y comienza la conversación</string>

    <string name="retry">Buscar candidatos</string>
    <string name="title_activity_maps">Map</string>
    <string name="see_in_map">Ver en mapa</string>

    <string name="report">Denunciar</string>
    <string name="block">Bloquear</string>
    <string name="delete_chat">Eliminar link</string>
    <string name="share">Compartir</string>


    <string name="title_activity_blocked">BlockedActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="activity_blocked_title">Has sido bloqueado</string>
    <string name="activity_blocked_subtitle"> Los administradores han recibido denuncias de otros usuarios y han decidido bloquearte. No podras ingresar mas en la aplicacion</string>

    <string name="activity_blocked_btn"> Salir</string>
    <string name="title_activity_pick_profile_photo">PickProfilePhotoActivity</string>
    <string name="report_default_type">Selecciona una razón</string>
    <string-array name="report_array">
        <item>Selecciona una razón</item>
        <item>Spam</item>
        <item>Mensaje Inapropiado</item>
        <item>Comportamiento Sospechoso</item>
        <item>Otros</item>
    </string-array>
    <string-array name="report_array_type">
        <item></item>
        <item>spam</item>
        <item>inappropiate-message</item>
        <item>suspicious</item>
        <item>other</item>
    </string-array>
    <string name="report_text_hint">Razones de la denuncia</string>
    <string name="report_prompt">Seleccione una razón</string>

</resources>
