<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/white"
        android:layout_margin="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                style="@style/profileTitle.sub.black"
                android:text="@string/missing_gender_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/profileTitle.sub.black"

                    android:text="@string/missing_gender_fem"/>

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/profileTitle.sub.black"

                    android:text="@string/missing_gender_male"/>
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/btnObtenerLinkUpPlus"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:height="@dimen/button_height"
            android:layout_gravity="bottom"
            android:background="@color/accent"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:text="@string/missing_gender_btn_ok"
            android:textColor="@color/icons"/>
    </android.support.v7.widget.CardView>



</LinearLayout>