<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contentNoMoreCandidates"
    android:layout_width="match_parent"
    android:visibility="invisible"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imgNoMoreCandidates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/empty_state_nothing_to_search"
            android:background="?attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/subtitleNoMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size_medium"
            android:layout_below="@+id/imgNoMoreCandidates"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/no_more_candidates"/>
        <TextView
            android:id="@+id/subtitle2NoMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size_medium"
            android:layout_below="@id/subtitleNoMore"
            android:layout_centerHorizontal="true"
            android:text="@string/came_back_later"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_retry_candidates"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:height="@dimen/button_height"
        android:background="@color/primary"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:text="@string/retry"
        android:textColor="@color/icons"/>

</RelativeLayout>
