<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbarEditAccount"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:layout_margin="@dimen/activity_vertical_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/editAccountTitle"
                    android:gravity="start"
                    android:text="@string/edit_settings_invisible_mode"/>
                <Switch
                    android:id="@+id/switchInvisibleMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin_small"
                    style="@style/profileTitle.sub"
                    android:textSize="@dimen/text_size_xsmall"
                    android:text="@string/edit_settings_invisible_mode_hint"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin_small"
            style="@style/editAccountTitle"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/edit_settings_seccion_exploration"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/editAccountTitle"
                    android:layout_marginBottom="@dimen/activity_vertical_margin_small"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/text_size_small"
                    android:text="@string/edit_settings_seccion_exploration_sub"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/editAccountTitle"
                        android:gravity="start"
                        android:text="@string/edit_settings_exploration_men"/>
                    <Switch
                        android:id="@+id/switchSearchesMen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/editAccountTitle"
                        android:gravity="start"
                        android:text="@string/edit_settings_exploration_women"/>
                    <Switch
                        android:id="@+id/switchSearchesWomen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/editAccountTitle"
                        android:gravity="start"
                        android:text="@string/edit_settings_exploration_just_friends"/>

                    <Switch
                        android:id="@+id/switchSearchesFriends"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/editAccountTitle"
                        android:gravity="start"
                        android:layout_marginBottom="@dimen/activity_vertical_margin_small"
                        android:text="@string/edit_settings_exploration_age_range"/>
                    <TextView
                        android:id="@+id/ageRangeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        style="@style/editAccountTitle"
                        android:layout_marginBottom="@dimen/activity_vertical_margin_small"
                        />
                </LinearLayout>


                <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                    android:id="@+id/rangeSeekbar1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:min_value="18"
                    app:max_value="69"
                    app:bar_color="@color/primary_light"
                    app:bar_highlight_color="@color/primary_dark"
                    app:data_type="_integer"
                    app:left_thumb_color="@color/primary"
                    app:left_thumb_color_pressed="@color/primary"
                    app:right_thumb_color="@color/primary"
                    app:right_thumb_color_pressed="@color/primary"
                    app:corner_radius="1"



                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"

            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            style="@style/profileTitle.sub"
            android:textSize="@dimen/text_size_xsmall"
            android:text="@string/edit_settings_exploration_age_range_hint"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/editAccountTitle"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/edit_settings_seccion_app_settings"
                android:layout_margin="@dimen/activity_vertical_margin"/>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_vertical_margin"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/editAccountTitle"
                            android:gravity="start"
                            android:text="@string/edit_settings_app_settings_notifications"/>
                        <Switch
                            android:id="@+id/switchNotifications"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                    </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/btnObtenerLinkUpPlus"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:height="@dimen/button_height"
                android:background="@color/accent"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:text="@string/edit_settings_btn_get_link_plus"
                android:textColor="@color/icons"/>

            <Button
                android:id="@+id/btnLogOut2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:height="@dimen/button_height"
                android:background="@color/icons"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:text="Cerrar sesion"
                android:textColor="@color/accent"/>

            <Button
                android:id="@+id/btnDeleteAccount"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"                android:height="@dimen/button_height"
                android:background="@color/icons"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:text="@string/edit_settings_btn_get_eliminar"
                android:textColor="@color/accent"/>
        </LinearLayout>


    </ScrollView>

</LinearLayout>