<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="6dp"
        android:layout_margin="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="92dp"
                    android:layout_height="92dp"
                    android:tint="@color/primary"
                    android:layout_gravity="center"
                    android:src="@drawable/logo"/>

            </FrameLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_img"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal"
                android:text="@string/activity_blocked_title"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/activity_blocked_subtitle"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginBottom="48dp">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom">
            <Button
                android:id="@+id/btn_blocked"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:height="@dimen/button_height"
                android:background="@color/primary"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:text="@string/activity_blocked_btn"
                android:textColor="@color/icons"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
